--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
@@ -66,13 +65,7 @@
           <span class="typed" data-typed-items="Ruben Kinnart"></span>
         </h1>
         <p id="subtitle" style="background-color: #b8a07e;"> Student toegepaste informatica @Hogeschool PXL</p>
-        <!-- style="background-color: #b8a07e;" -->
-        <!-- <p id="subtitle"> Applicatieontwikkeling: AI & Robotics</p> -->
         <ul class="list-unstyled list-social">
-          <!-- <li><a href="https://www.facebook.com/ruben.kinnart" target="_blank"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="https://twitter.com/Rubenkinnart" target="_blank"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/ruben.kinnart/" target="_blank"><i class="bi bi-instagram"></i></a>
-          </li> -->
           <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a>
           </li>
           <li><a href="https://github.com/RubenKinnartPXL" target="_blank"><i class="bi bi-github"></i></a></li>
@@ -470,54 +463,46 @@
 
       <div class="container">
         <div class="about-descr">
-          <p>Terugkijkend naar de afgelopen 3 jaar heb ik door deze opleiding een grote basis aan kennis vergaart en
-            heb ik enorm veel bijgeleerd. Elk aspect van het professionele werkgebied werd onder de loep genomen, van
+          <p>Terugkijkend naar de afgelopen 3 jaar heb ik door deze opleiding een grote basis aan kennis vergaart en heb
+            ik enorm veel bijgeleerd. Elk aspect van het professionele werkgebied werd onder de loep genomen, van
             programmeren tot het business gedeelte. Niet enkel mijn kennis is gegroeid, ook mijn soft skills zijn erop
-            vooruitgegaan. Zowel de projecten en de groepswerken als de popsessies hebben hiervoor gezorgd. Hier werd
-            het nog maar eens duidelijk dat communicatie, planning en aanpak de sleutels naar een succesvol project
-            zijn, en niet puur de kennis en vaardigheden van de teamleden. Toen ik op de PXL begon met deze opleiding
-            was ik een redelijk verlegen persoon vergeleken met nu. In groep aan projecten werken gaat nu veel beter.
-            Als ik denk aan de doelen die ik voor mezelf had opgesteld voor de opleiding denk ik zeker dat ik deze
-            behaald heb. Ik ben blij dat ik deze opleiding tot een goed einde heb kunnen brengen in 3 jaar.</p>
-          <p>In het middelbaar heb ik wetenschappen wiskunde gestudeerd. Ik wist niet wat ik later wou doen tot ik in
-            het 6de middelbaar een seminarie programmeren had gevolgd. Het was een leuke ervaren en ik heb geen spijt
-            voor het kiezen van deze opleiding, al mis ik de interessante wetenschapsvakken ook een beetje. Het kiezen
-            voor een afstudeerrichting in het tweede jaar was voor mij een twijfelmoment. Zo leek software-management
-            me leuk aangezien de jobs me interesseren. Toch ben ik voor applicatieontwikkeling, specifiek AI &
-            Robotics, gegaan aangezien dit een innovatief onderwerp is wat ik zelf ook zeer boeiend vind. Ik denk wel
-            dat ik in de toekomst nog iets business gerelateerd ga bijleren om ook hier meer ervaring in op te doen.
-            Werkervaring zal me helpen inzien welke kant ik uit wil gaan in de toekomst, er zijn velen
-            specialisatiekanten waaruit ik kan kiezen. </p>
-          <p>Persoonlijk vond ik dat I-talent een grote en positieve rol speelde binnen mijn opleiding. De seminaries
-            zorgden voor wat afwisseling met vele interessante en nieuwe onderwerpen tussen de lessen door. Naast
-            nieuwe informatie zorgden bedrijven ook vaak tijdens deze seminaries voor een beetje inzicht over hoe het
-            er aan toe gaat op de effectieve werkvloer. Ook heeft het ervoor gezorgd dat ik de X-factor meekreeg. Het
-            heeft me geholpen om in grote maten te groeien, zowel op vlak van bijleren en kennis als op vlak van
-            samenwerken, ondernemen en verantwoordelijkheid opnemen. Zeer jammer is dat (inter)nationale samenwerking
-            dit jaar wegviel wegens COVID-19, ik had dit ook nog graag willen meenemen om mijn grenzen nog eens extra
-            te verleggen. </p>
-          <p>Voor de opleiding was ik zeer precies en vond ik het moeilijk om op te treden en knopen door te hakken in
-            groep. Ook het spreken voor een groep van mensen verliep stroef. Ik kan zeggen dat ik op al deze vlakken
-            ben gegroeid, toch ga ik hier ook nog verder op werken in de toekomst.</p>
-          <p>Ik ben trots dat ik kan zeggen dat ik dit hoofdstuk binnenkort geslaagd kan afsluiten en meteen kan
-            beginnen aan een nieuw hoofdstuk. Ik sta nu meer dan ooit open om dingen bij te leren en om te groeien. Ik
-            wil daarom de PXL ook bedanken om dit opleidingsonderdeel op te nemen in het leertraject, de kennis die ik
-            heb opgedaan tijdens de vele activiteiten zal ik zeker meenemen in mijn toekomstige carrière.</p>
+            vooruitgegaan. Zowel de projecten en de groepswerken als de popsessies hebben hier aan bijgedragen. Hier
+            werd het nog maar eens duidelijk dat niet puur de kennis en vaardigheden van de teamleden maar wel een goede
+            communicatie, planning, aanpak en inzet van een volledig team de sleutels naar een succesvol project zijn.
+          </p>
+          <p>Toen ik met deze opleiding begon was ik een redelijk verlegen persoon, hier ben ik echter in gegroeid. In
+            groep aan projecten werken gaat nu ook veel beter. Als ik denk aan de doelen die ik voor mezelf had
+            opgesteld voor ik met de opleiding startte denk ik zeker dat ik deze behaald heb. Zo ben ik blij dat ik deze
+            opleiding tot een goed einde heb kunnen brengen en dat ik klaar ben om me in de professionele wereld te
+            begeven. </p>
+          <p>In het middelbaar heb ik wetenschappen wiskunde gestudeerd. Ik wist niet wat ik later wou doen tot ik als
+            zesdejaars een seminarie programmeren had gevolgd. Het was een leuke ervaren en ik heb geen spijt voor het
+            kiezen van deze opleiding, al mis ik de interessante wetenschapsvakken ook een beetje. Het kiezen voor een
+            afstudeerrichting in het tweede jaar was voor mij een twijfelmoment. Zo leek softwaremanagement me leuk
+            aangezien de hieraan gerelateerde jobs me interesseerden. Toch ben ik voor applicatieontwikkeling, specifiek
+            AI & Robotics, gegaan aangezien dit een innovatief onderwerp is wat ik dan ook zeer boeiend vind. Ik denk
+            wel dat ik in de toekomst nog iets business gerelateerd ga bijleren om ook hier meer ervaring in op te doen.
+            Werkervaring zal me helpen inzien welke professionele richting ik uiteindelijk in de toekomst wil uitgaan,
+            er zijn velen specialisaties waaruit ik kan kiezen.</p>
+          <p>Persoonlijk vond ik dat I-Talent een grote en positieve rol speelde binnen mijn opleiding. De seminaries
+            zorgden voor wat afwisseling met vele interessante en nieuwe onderwerpen tussen de lessen door. Naast nieuwe
+            informatie zorgden bedrijven ook vaak tijdens deze seminaries voor een beetje inzicht over hoe het er
+            effectieve op de werkvloer aan toe gaat. Ook heeft het ervoor gezorgd dat ik de X-Factor meekreeg. Het heeft
+            me geholpen om in grote mate te groeien, zowel op vlak van vergaren van kennis als op vlak van samenwerken,
+            ondernemen en verantwoordelijkheid opnemen. Zeer jammer is dat (inter)nationale samenwerking dit jaar
+            wegviel wegens COVID-19, ik had dit ook nog graag willen meenemen om mijn grenzen nog extra te verleggen.
+          </p>
+          <p>In het begin van de opleiding was ik zeer terughoudend ingesteld. Ik vond het moeilijk om in een team naar
+            voren te treden en beslissingen te nemen. Ook het spreken voor een groep verliep stroef. Ik kan zeggen dat
+            ik op al deze vlakken ben gegroeid door in teams projecten uit te werken. Ook in de toekomst ga ik hier nog
+            verder aan werken.</p>
+          <p>Ik ben trots dat ik kan zeggen dat ik dit hoofdstuk binnenkort als geslaagd kan afsluiten en aan een nieuw
+            hoofdstuk kan beginnen. Ik sta nu meer dan ooit open om dingen bij te leren en om te groeien. Ik wil daarom
+            de PXL ook bedanken om dit opleidingsonderdeel op te nemen in het leertraject, de kennis die ik heb opgedaan
+            tijdens de vele activiteiten zal ik zeker meenemen in mijn toekomstige carrière.</p>
         </div>
       </div>
     </div>
-
-
-
-    <!-- <div id="extra" class="text-left paddsection">
-
-      <div class="container">
-        <div class="section-title text-center">
-          <h2>Over</h2>
-        </div>
-      </div>
-
-    </div> -->
 
   </main>
 
@@ -529,10 +514,6 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <!-- <li><a href="https://www.facebook.com/ruben.kinnart" target="_blank"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="https://twitter.com/Rubenkinnart" target="_blank"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/ruben.kinnart/" target="_blank"><i class="bi bi-instagram"></i></a>
-          </li> -->
           <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a>
           </li>
           <li><a href="https://github.com/RubenKinnartPXL" target="_blank"><i class="bi bi-github"></i></a></li>
