--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul class="list-unstyled list-social">
           <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a>
           </li>
-          <li><a href="https://github.com/RubenKinnartPXL" target="_blank"><i class="bi bi-github"></i></a></li>
+          <li><a href="https://github.com/RubenKinnart" target="_blank"><i class="bi bi-github"></i></a></li>
         </ul>
       </div>
     </div>
@@ -92,7 +92,7 @@
             <div class="div-img-bg">
               <div class="about-img">
                 
-                <img src="assets/img/me.jpg" class="img-responsive" alt="me">
+                <img src="assets/img/me.jpeg" class="img-responsive" alt="me">
               </div>
             </div>
           </div>
